--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "typing-extensions (==4.14.1)",
     "tzdata (==2025.2)",
     "urllib3 (==2.5.0)",
-    "fastapi (>=0.116.1,<0.117.0)",
+    "fastapi (>=0.117.1,<0.118.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "sentry-sdk[fastapi] (>=2.34.1,<3.0.0)",
     "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
@@ -42,8 +42,9 @@ dependencies = [
     "alembic (>=1.16.4,<2.0.0)",
     "pymysql (>=1.1.1,<2.0.0)",
     "wqb (>=0.2.5,<0.3.0)",
-    "bc-fastkit @ file:///Users/alian/code/my/bc-fastkit",
-    "humps (>=0.2.2,<0.3.0)"
+    "humps (>=0.2.2,<0.3.0)",
+    "sqlmodel (>=0.0.25,<0.0.26)",
+    "bc-fastkit @ file:///Users/alian/code/my/bc-fastkit"
 ]
 
 
@@ -59,3 +60,7 @@ priority = "primary"
 
 [tool.poetry.dependencies]
 bc-fastkit = {develop = true}
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.3.0"
+
