--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "wqb (>=0.2.5,<0.3.0)",
     "humps (>=0.2.2,<0.3.0)",
     "sqlmodel (>=0.0.25,<0.0.26)",
-    "bc-fastkit @ file:///Users/alian/code/my/bc-fastkit"
+    "bc-fastkit @ file:///Users/alian/code/my/bc-fastkit",
 ]
 
 
