--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,6 @@ dependencies = [
     "wqb (>=0.2.5,<0.3.0)",
     "humps (>=0.2.2,<0.3.0)",
     "sqlmodel (>=0.0.25,<0.0.26)",
-    "bc-fastkit @ file:///Users/alian/code/my/bc-fastkit",
 ]
 
 
@@ -59,7 +58,11 @@ url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 priority = "primary"
 
 [tool.poetry.dependencies]
-bc-fastkit = {develop = true}
+bc-fastkit = [
+    { path = "../bc-fastkit", develop = true, optional = true },
+    { git = "https://github.com/alianwbc/bc-fastkit.git", rev = "main" }
+]
+
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.3.0"
